[gd_scene load_steps=4 format=3 uid="uid://bjgjtyvo20f6q"]

[ext_resource type="Script" path="res://Scripts/Ores.gd" id="1_845qv"]
[ext_resource type="Texture2D" uid="uid://d0jkurhkuq0gr" path="res://Art/Caves and Mines/Ruby.png" id="2_y12r6"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jr8xw"]
size = Vector2(48, 20)

[node name="Ruby" type="Area2D"]
script = ExtResource("1_845qv")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_jr8xw")

[node name="Ruby" type="Sprite2D" parent="."]
position = Vector2(48, 48)
texture = ExtResource("2_y12r6")

[connection signal="body_shape_entered" from="." to="." method="_on_body_shape_entered"]
[connection signal="body_shape_exited" from="." to="." method="_on_body_shape_exited"]
[connection signal="mouse_shape_entered" from="." to="." method="_on_mouse_shape_entered"]
[connection signal="mouse_shape_exited" from="." to="." method="_on_mouse_shape_exited"]
